...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWd-Ti-NNt">
                                <rect key="frame" x="16" y="528" width="100" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="TutorialSkipButton1"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="MKR-Mf-Oqa"/>
...
        <scene sceneID="xfp-Pc-YyT">
            <objects>
                <tableViewController title="Dashboard" id="leu-DP-sEf" customClass="DashboardTableViewController" customModule="PiControl" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="Qth-Nm-K9g">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                            <rect key="frame" x="15" y="0.0" width="238" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <accessibility key="accessibilityConfiguration" identifier="ServerListLabel"/>
                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                            <nil key="textColor"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L1q-27-lvK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="UbX-6u-goo"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NMq-ty-v03">
...
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="A name for your Pi" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4yg-zG-Lwj">
                                                            <rect key="frame" x="103.5" y="0.0" width="176.5" height="20.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="ConfigServerNameTextField"/>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
...
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="http://yourpi.local" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEk-sp-8ha">
                                                            <rect key="frame" x="108.5" y="0.0" width="171.5" height="20.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="ConfigHostAddressTextField"/>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
...
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="3000" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mae-qH-Xhr">
                                                            <rect key="frame" x="102.5" y="0.0" width="177.5" height="20.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="ConfigPortNumberTextField"/>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
...
                                                    <rect key="frame" x="20" y="11" width="191" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ConfigUserCommandsLabel"/>
                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                    <rect key="frame" x="20" y="11" width="40" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ConfigGPIOLabel"/>
                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Pi" id="r1H-fG-KmY">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="W0l-co-xvt">
                            <connections>
...
