...
        
        let alertController = UIAlertController(title: "Command arguments", message: "What are the arguments for this command?", preferredStyle: .alert)
        
        alertController.addTextField(configurationHandler: { (textField : UITextField!) -> Void in
            textField.placeholder = "Enter all arguments separated by a space"
        })
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { action in

        }
        alertController.addAction(cancelAction)
        
        let OKAction = UIAlertAction(title: "OK", style: .default) { action in
            let args = alertController.textFields?[0].text ?? ""
...
